# qA_Ap

./: .gitignore  LICENSE  README.md  TODO  Untitled-1.js  app.py  migrate from flat files.py  pyproject.toml  rename.py  requirements.txt  test.ipynb
data/qaap_db/rag/: store.pkl
data/test_db/documents/Post bleu/: document.txt
data/test_db/documents/Post bleu et orange/: document.txt
data/test_db/documents/Post pink and noir/: document.txt
data/test_db/documents/Post pink et rouge/: document.txt
data/test_db/posts/Post3 copy/: document.txt
data/test_db/rag/: store.pkl
data/test_db/summaries/: catalog.json  couleurs.txt
data/tools_db/documents/Amulet/: document.txt
data/tools_db/documents/Ardour/: document.txt
data/tools_db/documents/Aseprite/: document.txt
data/tools_db/documents/Audacity/: document.txt
data/tools_db/documents/Blender/: tool.txt  (+1 more)
data/tools_db/rag/: store.pkl
data/tools_db/summaries/: tags.txt
frontend_base/: boot.css  style.css
qA_Ap/: __init__.py  settings.py
qA_Ap/app/: __init__.py  catalog.py  methods.py
qA_Ap/app/ai/: __init__.py  faissvectorstore.py  methods.py  vectorstore.py
qA_Ap/classes/: __init__.py  errors.py
qA_Ap/classes/errors/: db.py
qA_Ap/cli/: __init__.py
qA_Ap/db/: __init__.py  baserowfreeapidb.py  flatfiledb.py  qaapdb.py
qA_Ap/docs/: index.html  qA_Ap.html  search.js
qA_Ap/globals/: __init__.py
qA_Ap/state/: __init__.py
qA_Ap/web/: __init__.py  api.py  api_docs.html
qA_Ap/web/frontend/: boot.css  index.html  qaap.js  script.js
tests/: test_baserowfreeapidb.py  test_flatfiledb.py
(+30 files in other folders)
