[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "qA_Ap"
version = "0.1"
authors = [
  { name="Martin Ashton-Lomax", email="ashtonlomaxmartin@gmail.com" },
]
description = "query About Anything package: A Q&A application powered by LLMs and RAG on custom data."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Fleurman/qA_Ap"
Issues = "https://github.com/Fleurman/qA_Ap/issues"
Documentation = "https://martin.surlesinternets.ch/qA_Ap/docs"